fixed spacing on front page and posted a new article

--- a/components/aside-nav.module.css
+++ b/components/aside-nav.module.css
@@ -8,11 +8,14 @@
 }
 
 .aside ul {
+  margin-top: 0;
   padding: 0;
   font-size: smaller;
 }
 
-
+.aside h3 {
+  margin: 0 auto 0 auto;
+}
 
 .copyright {
   font-size: 0.7rem;
